force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/Whistleblower_Support__c.object-meta.xml
<CustomObject>
    <label>Support</label>
    <nameField>
        <label>Whistleblower Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>