force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>