force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/fields/Question_Details__c.field-meta.xml
<CustomField>
    <fullName>Question_Details__c</fullName>
    <label>Question Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>