force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/fields/Reporter_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporter_First_Name__c</fullName>
    <formula>Reporter__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporter First Name</label>
    <type>Text</type>
</CustomField>