force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>