force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/fields/Whistleblower_Report__c.field-meta.xml
<CustomField>
    <fullName>Whistleblower_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Whistleblower Report</label>
    <referenceTo>Whistleblower_Report__c</referenceTo>
    <relationshipLabel>Whistleblowers Support</relationshipLabel>
    <relationshipName>Whistleblowers_Support</relationshipName>
    <type>Lookup</type>
</CustomField>