force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Whistleblower_Report__c</columns>
    <columns>Reporter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>