force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Support__c/listViews/My_Support_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Support_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Anonymous__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Access__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Support Tickets</label>
</ListView>